ui-ingress.yml
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: ui
  spec:
    rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: ui
            servicePort: 9292
